@@ -4,8 +4,12 @@
 
 = trunk =
 * Add file headers to lib/class*
+* BUGFIX Non-static method Testimonials_Widget::get_testimonials_html() should not be called statically on line 546 in file /Users/michael/Sites/wp/wp-content/plugins/testimonials-widget/testimonials-widget.php
 * Correct static get_testimonials_html and get_testimonials_htmls function declaration
 * Correct static validators call
+* Explain options inheritance
+* FEATURE Remove Plugin Data on Deletion? - Delete all Testimonials Widget data and options from database on plugin deletion
+* Refactor out get_quote and get_cite from get_testimonial_html
 * Remove $blank from testimonials_truncate()
 * Rename metabox.class.php class-redrokk-metabox-class.php
 * Rename settings.testimonials-widget.php class-settings-testimonials-widget.php
